<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        tools:context=".InfoCane">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chalkduster"
            android:text="@string/info_dog"
            android:textColor="@color/endblue"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/UriImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:src="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/textView_InfoNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="Nome : "
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UriImage" />

        <TextView
            android:id="@+id/textView_infoRazza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/TextView_Razza"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ViewNome" />

        <TextView
            android:id="@+id/textView_InfoSesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/TextView_sesso"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ViewRazza" />

        <TextView
            android:id="@+id/textView_InfoColore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/TextView_colore"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ViewSesso" />

        <TextView
            android:id="@+id/textView_InfoChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/textView_chip"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ViewCollare" />

        <TextView
            android:id="@+id/textView_InfoCollare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/TextView_Collare"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ViewColore" />

        <TextView
            android:id="@+id/textView_InfoInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/textView_InfoAggiuntive"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ViewChip" />

        <TextView
            android:id="@+id/textView_ViewNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/Null"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_InfoNome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView_ViewRazza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/Null"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_infoRazza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView_ViewSesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/Null"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_InfoSesso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView_ViewColore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/Null"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_InfoColore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView_ViewCollare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/Null"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="italic|bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_InfoCollare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView_ViewInfo"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/back"
            android:fontFamily="@font/arial_rounded_bold"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/Null"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_InfoInfo" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="123dp" />

        <TextView
            android:id="@+id/textView_ViewChip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:text="@string/Null"
            android:textColor="@color/endblue"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_InfoChip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_ViewInfo" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>